# zoomcamp

./: .gitignore  input.parquet  output.parquet  pyproject.toml
module_1/: homework.ipynb
module_2/: homework.ipynb  mlflow.db
module_2/artifacts/2/0ee8ece8aa5e4a4ea1e0fbbfbb5de332/artifacts/: estimator.html
module_2/artifacts/2/122e6e31719c441b808dd0dbbfd1d85c/artifacts/: estimator.html
module_2/artifacts/2/7f5336abdee34534b4cd8f15864fc4ee/artifacts/: estimator.html
module_2/artifacts/2/cc0634e989b24d9fad596b3a2301cc11/artifacts/: estimator.html
module_2/artifacts/2/ce9a28f640714fe6a765a5a7d1a74c3b/artifacts/: estimator.html
module_2/scripts/: hpo.py  mlflow.db  register_model.py  train.py
module_3/: homework.ipynb
module_3/mlops/mlops/: metadata.yaml  settings.yaml
module_3/mlops/mlops/homework_03/data_exporters/: export_model.py
module_3/mlops/mlops/homework_03/data_loaders/: data_load.py
module_4/: Dockerfile  homework.ipynb  homework.py
module_5/config/: dashboard_config.json
module_5/dashboards/: dashboard_config.json
module_5/workspace/019267e6-d026-7bb6-8919-29730818e20b/: metadata.json
module_5/workspace/019267e6-d026-7bb6-8919-29730818e20b/snapshots/: 019267ea-4b90-7ad3-bf08-f2fe72462e13.json
module_5/workspace/01927119-77a0-712b-83c9-c19d04b239e3/: metadata.json
module_5/workspace/01927119-77a0-712b-83c9-c19d04b239e3/snapshots/: 01927119-8617-7b7c-862d-b01e827bf11c.json
module_6/: batch copy.py  batch.py  docker-compose.yaml  homework.ipynb
module_6/tests/: __init__.py  integration_test.py  test_batch.py
(+24 files in other folders)
