[tool.poetry]
name = "zoomcamp"
version = "0.0.1"
description = "zoomcamp homework repository"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pd = {extras = ["pyarrow"], version = "^0.0.4"}
pyarrow = "^17.0.0"
mlflow = "^2.16.0"
hyperopt = "^0.2.7"
jupyter = "^1.1.1"
evidently = "^0.4.38"
joblib = "^1.4.2"
pytest = "^8.3.3"
pandas = {extras = ["pyarrow"], version = "^2.2.3"}
boto3 = "1.35.0"
awscli = "1.35.0"
s3fs = "^2024.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
